--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,8 +1,8 @@
-# Mysql  
-driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
-username=root
-password=root
+# db
+driver=oracle.jdbc.driver.OracleDriver
+url=jdbc:oracle:thin:@localhost:1521:orcl
+username=scott
+password=tiger
 initialPoolSize = 1
 minPoolSize = 1
 maxPoolSize =10
