--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,8 +1,10 @@
 # db
-driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521:orcl
-username=scott
-password=tiger
+#driver=com.mysql.jdbc.Driver
+driver=com.p6spy.engine.spy.P6SpyDriver
+url=jdbc:p6spy:mysql://localhost:3306/test?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+#url=jdbc:mysql://localhost:3306/test?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+username=root
+password=root
 initialPoolSize = 1
 minPoolSize = 1
 maxPoolSize =10
