--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,17 @@
 		<param-value>classpath:applicationContext.xml</param-value>
 	</context-param>
 
+	<!-- 下面的Filter以自定义的Request对象替换掉原有的Request，进行POST数据的保持和自定义解码 -->
+	<!-- 可以解决下面两个问题： 1，CheckUrl拦截器读取InputStream导致getParameter()方法失效； 2，POST数据由于有自定义Unicode编码，解码时也需要读取InputSteam -->
+	<filter>
+		<filter-name>LoggingFilter</filter-name>
+		<filter-class>com.demo.common.filter.LoggingFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>LoggingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<servlet>
 		<servlet-name>spring</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
